GatedSizedPastelRecipe#getIngredients: Don't attempt to access null SizedIngredients
Also use Stream#toList where applicable, which can be more optimized