@@ -11,8 +11,8 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public abstract class GatedSizedPastelRecipe<C extends RecipeInput> extends GatedPastelRecipe<C> {
 
@@ -29,7 +29,7 @@ public abstract class GatedSizedPastelRecipe<C extends RecipeInput> extends Gate
     @Override
     public @NotNull NonNullList<Ingredient> getIngredients() {
         return NonNullList
-            .copyOf(getSizedIngredients().stream().map(SizedIngredient::ingredient).collect(Collectors.toList()));
+            .copyOf(getSizedIngredients().stream().filter(Objects::nonNull).map(SizedIngredient::ingredient).toList());
     }
 
     protected boolean matchIngredientStacksExclusively(
